<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/menu_background"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp" />


    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/menuText_color"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:background="@color/menu_button"
        android:textSize="30sp"
        android:fontFamily="serif"
        />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/menuText_color"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/options"
        android:background="@color/menu_button"
        android:textSize="30sp"
        android:fontFamily="serif"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/menuText_color"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/help"
        android:background="@color/menu_button"
        android:textSize="30sp"
        android:fontFamily="serif"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/menuText_color"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/about"
        android:background="@color/menu_button"
        android:textSize="30sp"
        android:fontFamily="serif"/>


</LinearLayout>