<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/menu_background"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/options"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/menu_background"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="serif"
            android:text="@string/complexity"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerComplexity"
            android:layout_width="wrap_content"
            style="@style/SpinnerItem"
            android:layout_height="wrap_content"
            android:entries="@array/level" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:background="@color/menu_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="serif"
            android:text="@string/language"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            style="@style/SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/langs" />

    </LinearLayout>

</LinearLayout>